cmake_minimum_required(VERSION 3.23.2)
PROJECT(Letcode_Practice)
message("Hello, using Cmake!")
message("SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
#aux_source_directory(. ALL_CXX_FILES)
file(GLOB_RECURSE ALL_CXX_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
message(${ALL_CXX_FILES})
foreach(CXX_FILE IN LISTS ALL_CXX_FILES)
    get_filename_component(elfname ${CXX_FILE} NAME_WE)
    add_executable(${elfname} ${CXX_FILE})
endforeach()